[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Factory/Robots/widgetbot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Factory/Navigation/location_based_nav.gd" type="Script" id=2]
[ext_resource path="res://Assets/Factory/smt_factory_layout.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Factory/Factories/smt_factory_meta.gd" type="Script" id=4]
[ext_resource path="res://Objects/Factory/Robots/palletbot.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 124, 441, 124, 424, 125, 424, 125, 440, 483, 441, 485, 440, 485, 368, 486, 368, 486, 440, 658, 440, 658, 243, 659, 243, 659, 336, 813, 336, 813, 337, 659, 337, 659, 440, 1091, 440, 1091, 464, 1090, 464, 1090, 441, 1025, 441, 1025, 464, 1024, 464, 1024, 441, 786, 441, 786, 496, 816, 496, 816, 497, 786, 497, 786, 568, 816, 568, 816, 569, 785, 569, 785, 441, 685, 441, 685, 520, 684, 520, 684, 441, 620, 441, 619, 441, 620, 520, 619, 520, 484, 441, 484, 520, 483, 520 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 0, 3, 5 ), PoolIntArray( 5, 6, 7, 8 ), PoolIntArray( 9, 10, 11, 12 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 9, 12, 15 ), PoolIntArray( 9, 15, 16 ), PoolIntArray( 17, 18, 19, 20 ), PoolIntArray( 16, 17, 20, 21 ), PoolIntArray( 21, 22, 23, 24 ), PoolIntArray( 16, 21, 24 ), PoolIntArray( 16, 24, 25 ), PoolIntArray( 26, 27, 28, 29 ), PoolIntArray( 30, 31, 32, 33 ), PoolIntArray( 30, 33, 34, 29 ), PoolIntArray( 26, 29, 34 ), PoolIntArray( 25, 26, 34 ), PoolIntArray( 16, 25, 34 ), PoolIntArray( 16, 34, 35 ), PoolIntArray( 35, 36, 37, 38 ), PoolIntArray( 16, 35, 38 ), PoolIntArray( 16, 38, 39, 9 ), PoolIntArray( 8, 9, 39, 40 ), PoolIntArray( 39, 41, 42, 40 ), PoolIntArray( 8, 40, 43, 5 ), PoolIntArray( 4, 5, 43 ), PoolIntArray( 4, 43, 44, 45 ) ]
outlines = [ PoolVector2Array( 124, 424, 125, 424, 125, 440, 485, 440, 485, 368, 486, 368, 486, 440, 658, 440, 658, 243, 659, 243, 659, 336, 813, 336, 813, 337, 659, 337, 659, 440, 1091, 440, 1091, 464, 1090, 464, 1090, 441, 1025, 441, 1025, 464, 1024, 464, 1024, 441, 786, 441, 786, 496, 816, 496, 816, 497, 786, 497, 786, 568, 816, 568, 816, 569, 785, 569, 785, 441, 685, 441, 685, 520, 684, 520, 684, 441, 620, 441, 620, 520, 619, 520, 619, 441, 484, 441, 484, 520, 483, 520, 483, 441, 124, 441 ) ]

[node name="SMT_Factory" type="Node2D"]
script = ExtResource( 4 )
scene_picker_scene = "res://Scenes/scene_picker.tscn"
pause_button_path = NodePath("HBoxContainer/PauseButton")
speed_scale_label_path = NodePath("HBoxContainer/SpeedScaleLabel")

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 2 )
bots_node_path = NodePath("../Bots")
floorplan_meta_path = NodePath("..")

[node name="SMT_Factory_Layout" type="Sprite" parent="Navigation2D"]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )

[node name="Floor_Navigation" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Bots" type="Node" parent="."]

[node name="Bot0" parent="Bots" instance=ExtResource( 1 )]
position = Vector2( 483, 520 )
bot_id = "0"

[node name="Stacker" parent="Bots" instance=ExtResource( 5 )]
position = Vector2( 896, 432 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 92.0
margin_bottom = 24.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="HBoxContainer"]
margin_right = 92.0
margin_bottom = 24.0
text = "Exit to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="HBoxContainer"]
pause_mode = 2
margin_left = 102.0
margin_right = 152.0
margin_bottom = 24.0
focus_mode = 0
text = "Pause"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 162.0
margin_bottom = 24.0

[node name="SlowerButton" type="Button" parent="HBoxContainer"]
margin_left = 172.0
margin_right = 273.0
margin_bottom = 24.0
text = "<< Slow Down"

[node name="SpeedScaleLabel" type="Label" parent="HBoxContainer"]
margin_left = 283.0
margin_top = 5.0
margin_right = 314.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "500x"
align = 1
valign = 1

[node name="FasterButton" type="Button" parent="HBoxContainer"]
margin_left = 324.0
margin_right = 417.0
margin_bottom = 24.0
text = "Speed Up >>"

[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SlowerButton" to="." method="_on_SlowerButton_pressed"]
[connection signal="pressed" from="HBoxContainer/FasterButton" to="." method="_on_FasterButton_pressed"]
